Revert "Correct alignment in timeline when scrollbars are visible"
This reverts commit 1c909cb6c00757e6e7cb61188eb7f68d50f98111.

--- a/css/sozi.editor.view.css
+++ b/css/sozi.editor.view.css
@@ -51,8 +51,7 @@ body {
     position: absolute;
     top: 70%;
     width: 100%;
-    height: 2.5em;
-    padding: 0.5em 1em;
+    height: 2em;
 }
 
 .bottom {
@@ -60,9 +59,10 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: calc(30% - 2.5em);
+    height: calc(30% - 2em);
     
     overflow-y: auto;
+    padding: 0.5em 1em;
 }
 
 .aspect {
